# LP

./: README.md
bares/source/: CMakeLists.txt  README.md
bares/source/include/: evaluate_posfix.h  infix2posfix.h  parser.h  token.h
bares/source/src/: evaluate_posfix.cpp  infix2posfix.cpp  main.cpp  parser.cpp
bcr/source/: CMakeLists.txt
bcr/source/include/: BarChart.h
bcr/source/src/: app.cpp
sudoku/: CMakeLists.txt  README.md
sudoku/docs/: sample_text.conf
sudoku/docs/html/: annotated.html  classTestManager-members.html  classTestManager.html  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_289a9db7f5db18fcebe2284c66b05f94.html  dir_3e4011b093e9094a5bbfad1e0d15235b.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6c8313236d9db5b969ca7d150fe527de.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f7babe87e235bf8f11b73ffb4a356143.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  graph_legend.html  index.html  md__home_fernando_code_sudoku_README.html  menudata.js  namespacehandle.html  namespacemembers.html  namespacemembers_func.html  namespaceprint.html  namespaces.html  pages.html  structBoard-members.html  structBoard.html  structGameManager-members.html  structGameManager.html  structGameManager__coll__graph.dot  sudoku_8h_source.html  test__manager_8cpp.html  test__manager_8cpp__incl.dot  test__manager_8h.html  test__manager_8h__dep__incl.dot  test__manager_8h__incl.dot  (+2 more)
sudoku/docs/latex/: annotated.tex  classTestManager.tex  files.tex  index.tex  md__home_fernando_code_sudoku_README.tex  namespacehandle.tex  namespaceprint.tex  namespaces.tex  refman.tex  structBoard.tex  structGameManager.tex  (+8 more)
sudoku/include/: sudoku.h
sudoku/src/: app_sudoku.cpp  sudoku.cpp
(+107 files in other folders)
